# files2batches

./: README.md  pyproject.toml
files2batches/: main.py
fparts/: batch.py  main.py  pack.py
