[build-system]
requires = ["hatchling>=1.27.0", "wheel"]

build-backend = "hatchling.build"

[project]
name="files2batches"
# license = "MIT"
license = { file = "LICENSE" }
dynamic = [ "version" ]
keywords = [ "files2batches", "files", "grouping", "sorting", "batches", "exif", "metadata", "magic", "jpg", "jpeg", "mp4", "video", "photo", "image", "media" ]

dependencies = [
  'python-magic',
  'exifread',
]
authors = [
  { name="Yaroslav Polyakov", email="yaroslaff@gmail.com" },
]
description = "Group files into batches based on name/date/size (can use metadata)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",    
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/yaroslaff/files2batches"
Issues = "https://github.com/yaroslaff/files2batches/issues"


[project.scripts]
files2batches = "files2batches.main:main"

[tool.hatch.version]
path = 'files2batches/__about__.py'

[tool.hatch.metadata]
# license-files = ["LICENSE"]

[tool.hatch.envs]
py38 = { python = "3.8" }
py39 = { python = "3.9" }
py310 = { python = "3.10" }
py311 = { python = "3.11" }
py312 = { python = "3.12" }

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "coverage report -m",
]
cov = [
  "test-cov",
  "cov-report",
]


[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]



